@@ -73,9 +73,14 @@ function slick_hook_info() {
  * Implements hook_library_info_alter().
  */
 function slick_library_info_alter(&$libraries, $extension) {
-  if ($extension == 'slick' && function_exists('libraries_get_path')) {
+  if ($extension === 'slick' && function_exists('libraries_get_path')) {
     $libraries['slick']['js'] = ['/' . libraries_get_path('slick') . '/slick/slick.min.js' => []];
     $libraries['slick']['css']['base'] = ['/' . libraries_get_path('slick') . '/slick/slick.css' => []];
     $libraries['slick.css']['css']['theme'] = ['/' . libraries_get_path('slick') . '/slick/slick-theme.css' => []];
+  }
+
+  // Update the blazy/media library to depend on the slick/slick library.
+  if ($extension === 'blazy' && isset($libraries['media'])) {
+    $libraries['media']['dependencies'][] = 'slick/slick';
   }
 }
