@@ -35,18 +35,15 @@
   </div>
 {% endset %}
 
-{% spaceless %}
-  {% if url and not settings.player %}
-    <a href="{{ url }}"{{ url_attributes }}>{{ media }}</a>
+{% if url and not settings.player %}
+  <a href="{{ url }}"{{ url_attributes }}>{{ media }}</a>
 
-    {# Allows fieldable captions with A tag, such as social share. #}
-    {% if captions and captions.lightbox is defined %}
-      <div class="litebox-caption visually-hidden">
-        {{ captions.lightbox }}
-      </div>
-    {% endif %}
-
-  {% else %}
-    {{ media }}
+  {# Allows fieldable captions with A tag, such as social share. #}
+  {% if captions and captions.lightbox is defined %}
+    <div class="litebox-caption visually-hidden">
+      {{ captions.lightbox }}
+    </div>
   {% endif %}
-{% endspaceless %}
+ {% else %}
+  {{ media }}
+{% endif %}
