@@ -23,8 +23,6 @@
   ]
 %}
 
-{% spaceless %}
 <div{{ attributes.addClass(classes) }}>
   {{ item }}
 </div>
-{% endspaceless %}
